--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "list of blogs I like",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose",
-    "watch": "nodemon index.js",
-    "start": "node index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "watch": " cross-env NODE_ENV=development nodemon index.js",
+    "start": " cross-envNODE_ENV=production node index.js",
     "lint:index": "node_modules/.bin/eslint index.js",
     "lint": "eslint ."
   },
   "author": "Oheneba Poku-Marboah",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^6.0.3",
     "eslint": "^6.6.0",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4"
