--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "list of blogs I like",
   "main": "index.js",
   "scripts": {
+    "test:user_api": "npx jest tests/users_api.test.js --runInBand",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "watch": " cross-env NODE_ENV=development nodemon index.js",
     "start": " cross-envNODE_ENV=production node index.js",
@@ -20,10 +21,12 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.9"
+    "mongoose": "^5.7.9",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "jest": {
     "testEnvironment": "node"
