--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "test:user_api": "npx jest tests/users_api.test.js --runInBand",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-    "watch": " cross-env NODE_ENV=development nodemon index.js",
-    "start": " cross-envNODE_ENV=production node index.js",
+    "watch": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "start:test":"cross-env NODE_ENV=test node index.js",
     "lint:index": "node_modules/.bin/eslint index.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "deploy": "git push heroku master",
+    "logs:prod": "heroku logs --tail",
+    "build:ui": "rm -rf build && cd ../p5BlogListFrontEnd/bloglist-frontend && npm run build --prod && cp -r build ../../p4BlogList/ "
   },
   "author": "Oheneba Poku-Marboah",
   "license": "ISC",
